:bug: fix pagination and spacing between table and pagination

--- a/app/src/components/SortableTable.scss
+++ b/app/src/components/SortableTable.scss
@@ -99,7 +99,7 @@
 }
 
 .pagination {
-  margin-top: 10px;
+  margin-top: 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
